# bot-hw2-web

./: Dockerfile  LICENSE  pyproject.toml  setup.py
python_bot/: __init__.py  abstract_classes.py  addressbook.py  command_handlers.py  file_sorter.py  main.py  notebook.py
