[tool.poetry]
name = "python_bot"
version = "0.1.0"
description = ""
authors = ["NikitaDobry27 <bazhenov.nikita27@gmail.com>"]
readme = "README.md"
packages = [{include = "python_bot"}]

[tool.poetry.dependencies]
python = "^3.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
